# ai-second-brain

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/issues/: 01-resolve-design-inconsistencies.md  02-vault-strategy-and-layout.md  03-project-foundation-setup.md  04-knowledge-object-data-model.md  05-settings-loader.md  06-input-classifier.md  07-concept-extractor-and-builder.md  08-markdown-generator.md  09-storage-vault-writer.md  10-cli-end-to-end.md  11-educational-planner.md  12-illustration-prompt-builder.md  13-image-provider-gpt-image-2.md  14-illustration-storage-and-embedding.md  15-news-extractor.md  16-news-pipeline-integration.md  17-background-and-key-takeaways.md  18-fix-output-language.md  19-fetcher-js-rendered-articles.md  20-concise-output-filenames.md  21-readme-overview-illustration.md  22-vault-index-and-linker.md  23-claude-code-relink-skill.md  24-idempotent-generation.md  25-no-image-flag.md  26-inbox-worker.md  27-claude-code-channels-capture.md  28-comparison-knowledge-type.md  29-note-revision.md  30-readme-restructure.md  31-oss-boilerplate.md  32-generation-guidance.md  33-scheduled-news-feed.md  34-beyond-ai-any-knowledge.md  35-measure-and-document-cost.md  36-news-date.md  37-telegram-setup-guide.md  38-captured-content-ingestion.md
.github/workflows/: ci.yml
backend/: __init__.py  cli.py
backend/config/: __init__.py  settings.py
backend/image/: __init__.py  base.py  openai_provider.py
backend/inbox/: __init__.py  cli.py  worker.py
backend/linker/: __init__.py  cli.py  index.py  related.py
backend/llm/: __init__.py  base.py  openai_provider.py
backend/markdown/: __init__.py  generator.py  template.py
backend/models/: __init__.py  comparison.py  educational_plan.py  enums.py  knowledge_object.py  metadata.py  relationship.py
backend/parser/: __init__.py  builder.py  classifier.py  comparison_extractor.py  concept_extractor.py  fetcher.py  news_extractor.py
backend/planner/: __init__.py  educational_planner 2.py  educational_planner.py
backend/prompts/: __init__.py  domain.py  guidance.py  language.py
backend/services/: __init__.py  factory.py  pipeline.py
backend/storage/: __init__.py  frontmatter.py  git.py  illustration.py  paths.py  vault.py
config/: settings.example.toml
docs/: ARCHITECTURE.md  CAPTURED_CONTENT.md  DATA_MODEL.md  PROJECT_CHARTER.md  PROMPT_STYLE_GUIDE.md  ROADMAP.md  TELEGRAM_SETUP.md  TROUBLESHOOTING.md
docs/adr/: 0000-template.md  0001-design-baseline.md  0002-vault-and-layout.md  0003-graceful-degradation-of-enrichment.md  0004-news-ingestion-structured-extraction.md  0005-knowledge-organization-cost-model.md  README.md  (+4 more)
tests/: conftest.py  test_cli.py  test_smoke.py
(+36 files in other folders)
